# architecture

./: .env  .gitignore  API.yaml  CMakeLists.txt  appstop.sh  builder.sh  components.md  context.md  data_base_commands.sql  deploy_app.sh  docker-compose.yml  helper.h  loader_app.sh  order__main.cpp  order_main.cpp  request.http  service_main.cpp  start.sh  task.md  test.json  user_app.yaml  user_main.cpp  writer.cpp
apps/order/: Dockerfile  http_order_request_factory.h  http_order_server.h  order_handler.h
apps/service/: Dockerfile  http_service_request_factory.h  http_service_server.h  service_handler.h
apps/user/: Dockerfile  http_user_request_factory.h  http_user_server.h  user_handler.h
cache_testing/: cache.lua  data.json  no_cache.lua  performance.md  start_test.sh  test.cpp
config/: config.cpp  config.h
database/: cache.cpp  cache.h  database.cpp  database.h
docker/: Dockerfile  my.cnf
docker/mysql.conf.d/: mysqld.cnf
docker/proxysql/: Dockerfile  proxysql.cnf
entities/order/: order.cpp  order.h
entities/service/: service.cpp  service.h
entities/user/: user.cpp  user.h
mariadb/: Dockerfile
order/: Dockerfile  http_order_request_factory.h  http_order_server.h  order_handler.h
service/: Dockerfile  http_service_request_factory.h  http_service_server.h  service_handler.h
user/: Dockerfile  http_user_request_factory.h  http_user_server.h  user_handler.h
